--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     // Mock database of certificates
     const certificates = {
         "609c4be": {
-            name: "Rishu Gupta",
+            name: "Vikram Malviya",
             domain: "Python Programming Internship",
             duration: "4 weeks",
             startDate: "20/Jul/2024",
