--- a/index.html
+++ b/index.html
@@ -1,128 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Certificate Verification</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background-color: #f9f9f9;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Certificate Verification</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f9f9f9;
+      color: #333;
+    }
 
-        header {
-            background: #333;
-            color: #fff;
-            padding: 1rem 0;
-        }
+    /* Navigation Bar */
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #fff;
+      padding: 10px 20px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
 
-        header h1 {
-            margin: 0;
-        }
+    .navbar .logo img {
+      height: 50px;
+    }
 
-        .container {
-            padding: 2rem;
-            margin: 2rem auto;
-            width: 90%;
-            max-width: 600px;
-            background: #fff;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
+    .navbar .menu {
+      display: flex;
+      gap: 20px;
+    }
 
-        input[type="text"] {
-            width: 80%;
-            padding: 0.5rem;
-            margin-bottom: 1rem;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
+    .navbar .menu a {
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
 
-        button {
-            padding: 0.5rem 1rem;
-            background: #333;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
+    .navbar .menu a:hover {
+      color: #007bff;
+    }
 
-        button:hover {
-            background: #555;
-        }
+    /* Main Section */
+    .main {
+      text-align: center;
+      margin: 50px 20px;
+    }
 
-        .result {
-            margin-top: 2rem;
-            padding: 1rem;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background: #f1f1f1;
-        }
+    .main h1 {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
 
-        footer {
-            margin-top: 2rem;
-            padding: 1rem;
-            background: #333;
-            color: #fff;
-        }
-    </style>
+    .search-bar {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 30px;
+    }
+
+    .search-bar input {
+      width: 300px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+
+    .search-bar button {
+      padding: 10px 20px;
+      border: none;
+      background-color: #333;
+      color: #fff;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .search-bar button:hover {
+      background-color: #555;
+    }
+
+    /* Certificate Result */
+    .result {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      background-color: #fff;
+      text-align: left;
+    }
+
+    .result h2 {
+      margin-top: 0;
+      font-size: 20px;
+      text-align: center;
+    }
+
+    .result table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+
+    .result table td {
+      padding: 10px;
+      border: 1px solid #ccc;
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      margin: 20px 0;
+      font-size: 14px;
+      color: #777;
+    }
+
+    footer a {
+      text-decoration: none;
+      color: #007bff;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
+  <!-- Navigation Bar -->
+  <div class="navbar">
+    <div class="logo">
+      <img src="https://via.placeholder.com/150x50?text=CodSoft+Logo" alt="CodSoft">
+    </div>
+    <div class="menu">
+      <a href="#">Services</a>
+      <a href="#">Internship</a>
+      <a href="#">Jobs</a>
+      <a href="#">Verification</a>
+      <a href="#">About Us</a>
+      <a href="#">Contact Us</a>
+    </div>
+  </div>
 
-<header>
-    <h1>CodSoft Certificate Verification</h1>
-</header>
+  <!-- Main Content -->
+  <div class="main">
+    <h1>CERTIFICATE VERIFICATION SYSTEM</h1>
+    <div class="search-bar">
+      <input type="text" id="certificateCode" placeholder="Enter Certificate Code">
+      <button onclick="verifyCertificate()">Search</button>
+    </div>
+    <div id="certificateResult" class="result" style="display: none;">
+      <h2>Certificate Result</h2>
+      <table>
+        <tr>
+          <td><strong>Student Name:</strong></td>
+          <td>Vikram Malviya</td>
+        </tr>
+        <tr>
+          <td><strong>Domain:</strong></td>
+          <td>Python Programming Internship</td>
+        </tr>
+        <tr>
+          <td><strong>Duration:</strong></td>
+          <td>4 weeks</td>
+        </tr>
+        <tr>
+          <td><strong>Certification No:</strong></td>
+          <td>609c4be</td>
+        </tr>
+        <tr>
+          <td><strong>Starting Date:</strong></td>
+          <td>20/Jul/2024</td>
+        </tr>
+        <tr>
+          <td><strong>Award Date:</strong></td>
+          <td>20/Aug/2024</td>
+        </tr>
+      </table>
+    </div>
+  </div>
 
-<div class="container">
-    <h2>Certificate Verification System</h2>
-    <input type="text" id="certificateCode" placeholder="Enter Certificate Code">
-    <button onclick="verifyCertificate()">Search</button>
+  <!-- Footer -->
+  <footer>
+    © 2024 • Built with <a href="#">CodSoft</a>
+  </footer>
 
-    <div id="result" class="result" style="display: none;"></div>
-</div>
-
-<footer>
-    <p>© 2024 • Built with CodSoft</p>
-</footer>
-
-<script>
-    // Mock database of certificates
-    const certificates = {
-        "609c4be": {
-            name: "Vikram Malviya",
-            domain: "Python Programming Internship",
-            duration: "4 weeks",
-            startDate: "20/Jul/2024",
-            awardDate: "20/Aug/2024"
-        }
-    };
-
+  <script>
+    // Mock certificate verification
     function verifyCertificate() {
-        const code = document.getElementById("certificateCode").value;
-        const resultDiv = document.getElementById("result");
+      const input = document.getElementById('certificateCode').value;
+      const resultDiv = document.getElementById('certificateResult');
 
-        if (certificates[code]) {
-            const cert = certificates[code];
-            resultDiv.innerHTML = `
-                <h3>Certificate Result</h3>
-                <p><strong>Student Name:</strong> ${cert.name}</p>
-                <p><strong>Domain:</strong> ${cert.domain}</p>
-                <p><strong>Duration:</strong> ${cert.duration}</p>
-                <p><strong>Certification No:</strong> ${code}</p>
-                <p><strong>Starting Date:</strong> ${cert.startDate}</p>
-                <p><strong>Award Date:</strong> ${cert.awardDate}</p>
-            `;
-        } else {
-            resultDiv.innerHTML = "<p>Invalid certificate code. Please try again.</p>";
-        }
-
-        resultDiv.style.display = "block";
+      if (input === '609c4be') {
+        resultDiv.style.display = 'block';
+      } else {
+        alert('Invalid Certificate Code');
+        resultDiv.style.display = 'none';
+      }
     }
-</script>
-
+  </script>
 </body>
 </html>
