--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <!-- Navigation Bar -->
   <div class="navbar">
     <div class="logo">
-      <img src="https://via.placeholder.com/150x50?text=CodSoft+Logo" alt="CodSoft">
+      <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=608,fit=crop,q=95/Aq20eV79zLfpXV6b/logo-png-mnl7npnlXjHPl9KV.png" alt="CodSoft">
     </div>
     <div class="menu">
       <a href="#">Services</a>
